--- a/main/webpage/app.css
+++ b/main/webpage/app.css
@@ -50,6 +50,34 @@ h4 {
   color: #1d3557;
 }
 
+#connected_ap_label,
+#connected_ap {
+  display: inline;
+}
+
+#ip_address_label,
+#netmask_label,
+#gateway_label {
+  display: inline;
+}
+
+#wifi_connect_ip,
+#wifi_connect_netmask,
+#wifi_connect_gw {
+  display: inline;
+}
+
+#connected_ap,
+#wifi_connect_ip,
+#wifi_connect_netmask,
+#wifi_connect_gw {
+  color: #1d3557;
+}
+
+#disconnect_wifi {
+  display: none;
+}
+
 .buttons {
   padding: 5px;
 }
