SNTP functions finished and tested successfully

--- a/main/webpage/app.css
+++ b/main/webpage/app.css
@@ -36,6 +36,12 @@ h4 {
   color: red;
 }
 
+#local_time,
+#ap_ssid {
+  display: inline;
+  color: #1d3557;
+}
+
 #latest_firmware,
 #latest_firmware_label {
   display: inline;
